<resources>
    <string name="app_name">Ration At My Door</string>
    <string name="title_activity_music">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="adele_hello">Playing now Hello by Adele</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="rateUs">Rate Us</string>
    <string name="contactUs">Contact Us</string>
    <string name="logOut">Log Out</string>
    <string name="remote_services">Remote Services</string>
    <string name="sound_cloud">Sound Cloud</string>
    <string name="local_services">Local Services</string>
    <string name="app_raw_folder">App raw folder</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recently_played_songs">Recently Played Songs</string>
    <string name="hello">Someone Like You</string>
    <string name="adele">Adele</string>
    <string name="your_playlists">Your Playlists</string>
    <string name="let_me_go">Let Me Go</string>
</resources>
